# eMart-Django

./: .env  README.md  db.sqlite3  pyproject.toml
api/: admin.py  models.py
api/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_alter_category_name.py  0004_alter_review_ratings.py  0005_remove_product_category_remove_product_user.py  0006_product_numreviews_product_rating.py
api/serializers/: jwtSerializers.py  productSerializers.py  userSerializers.py
api/urls/: product_urls.py  review_urls.py  user_urls.py
api/views/: category_views.py  jwt_views.py  product_views.py  review_views.py  user_views.py
eMart/: asgi.py  settings.py  urls.py  wsgi.py
